--- a/electron-positive-1-negative-4.html
+++ b/electron-positive-1-negative-4.html
@@ -12,14 +12,14 @@
   <div id="container" style="height: 80vmin; width: 80vmin"></div>
 
   <script type="text/javascript" src="https://cdn.staticfile.net/jquery/3.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://registry.npmmirror.com/echarts/5.5.0/files/dist/echarts.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdmirror.com/npm/echarts@5.5.0/dist/echarts.min.js"></script>
   <!-- theme -->
-  <script type="text/javascript" src="https://registry.npmmirror.com/echarts/5.5.0/files/theme/dark.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdmirror.com/npm/echarts@5.5.0/theme/dark.js"></script>
   <!-- Uncomment this line if you want to dataTool extension
   <script type="text/javascript" src="https://registry.npmmirror.com/echarts/5.5.0/files/dist/extension/dataTool.min.js"></script>
   -->
 
-  <script type="text/javascript" src="https://registry.npmmirror.com/echarts-gl/2/files/dist/echarts-gl.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdmirror.com/npm/echarts-gl@2/dist/echarts-gl.min.js"></script>
 
   <!-- Uncomment this line if you want to echarts-stat extension
   <script type="text/javascript" src="https://registry.npmmirror.com/echarts-stat/latest/files/dist/ecStat.min.js"></script>
