--- a/electron-positive-1-negative-4.html
+++ b/electron-positive-1-negative-4.html
@@ -6,6 +6,7 @@
 <html lang="en" style="height: 100%">
 <head>
   <meta charset="utf-8">
+  <title>一正一负电荷电场仿真示意（电荷比 1:4）</title>
 </head>
 <body style="height: 100%; margin: 0; display: flex; justify-content: center; align-items: center; flex-direction: column;">
   <h3>一正一负电荷电场仿真示意（电荷比 1:4）</h3>
@@ -46,8 +47,6 @@
     $.getScript(
   'https://fastly.jsdelivr.net/npm/simplex-noise@2.4.0/simplex-noise.js'
 ).done(function () {
-  var noise = new SimplexNoise(Math.random);
-  var noise2 = new SimplexNoise(Math.random);
   var dian1 = [12.5, 20.5];
   var dian2 = [27.5, 20.5];
   var kq1 = 1;
@@ -89,31 +88,22 @@
   var data = generateData();
   myChart.setOption({
     visualMap: {
-      show: false,
+      show: true,
       min: valMin,
       max: valMax,
       dimension: 4,
       inRange: {
         color: [
-          'rgba(50,50,255,0.6)',
-          'rgba(50,50,255,0.2)',
-          'rgba(200,100,55,0.6)',
-          'rgba(210,110,50,0.625)',
-          'rgba(220,120,45,0.65)',
-          'rgba(225,130,40,0.675)',
-          'rgba(230,120,35,0.7)',
-          'rgba(235,110,30,0.725)',
-          'rgba(240,100,25,0.75)',
-          'rgba(242,90,20,0.775)',
-          'rgba(244,80,15,0.8)',
-          'rgba(246,70,10,0.825)',
-          'rgba(248,60,5,0.85)',
-          'rgba(250,50,0,0.875)',
-          'rgba(251,40,0,0.9)',
-          'rgba(252,30,0,0.925)',
-          'rgba(253,20,0,0.95)',
-          'rgba(254,10,0,0.975)',
-          'rgba(255,0,0,1)'
+          '#4575b4',
+          '#74add1',
+          '#abd9e9',
+          '#e0f3f8',
+          '#ffffbf',
+          '#fee090',
+          '#fdae61',
+          '#f46d43',
+          '#d73027',
+          '#a50026'
         ],
         opacity: [0, 1]
       }
