--- a/electron-positive-1-negative-4.html
+++ b/electron-positive-1-negative-4.html
@@ -9,7 +9,7 @@
   <title>一正一负电荷电场仿真示意（电荷比 1:4）</title>
 </head>
 <body style="height: 100%; margin: 0; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-  <h3>一正一负电荷电场仿真示意（电荷比 1:4）</h3>
+  <h3><a href="/" style="font-size: 0.5em">[首页]</a>一正一负电荷电场仿真示意（电荷比 1:4）</h3>
   <div id="container" style="height: 80vmin; width: 80vmin"></div>
 
   <script type="text/javascript" src="https://cdn.staticfile.net/jquery/3.7.1/jquery.min.js"></script>
