--- a/scalar-field.html
+++ b/scalar-field.html
@@ -10,7 +10,7 @@
 </head>
 <body
     style="height: 100%; margin: 0; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-<h3>标量场仿真示意（随机生成）</h3>
+<h3><a href="/" style="font-size: 0.5em">[首页]</a>标量场仿真示意（随机生成）</h3>
 <div id="container" style="height: 80vmin; width: 80vmin"></div>
 
 <script type="text/javascript" src="https://cdn.staticfile.net/jquery/3.7.1/jquery.min.js"></script>
